@@ -23,6 +23,11 @@ buildscript{
     }
 }
 
+plugins{
+    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
+    id "org.jetbrains.kotlin.kapt" version "1.4.32"
+}
+
 allprojects{
     apply plugin: 'maven-publish'
     
@@ -33,7 +38,7 @@ allprojects{
         versionNumber = '6'
         if(!project.hasProperty("updateUrl")) updateUrl = ''
         if(!project.hasProperty("versionModifier")) versionModifier = 'release'
-        if(!project.hasProperty("buildversion")) buildversion = '126.1'
+        if(!project.hasProperty("buildversion")) buildversion = '126.2'
         if(!project.hasProperty("clientVersion")) clientVersion = 'v1.0.0, Jan. 1, 1970'
         if(!project.hasProperty("versionType")) versionType = 'official'
         appName = 'Mindustry'
@@ -243,7 +248,6 @@ project(":desktop"){
 
     dependencies{
         implementation project(":core")
-        implementation project(":client")
         implementation arcModule("natives:natives-desktop")
         implementation arcModule("natives:natives-freetype-desktop")
         implementation 'com.github.MinnDevelopment:java-discord-rpc:v2.0.1'
@@ -283,7 +287,6 @@ project(":ios"){
 
     dependencies{
         implementation project(":core")
-        implementation project(":client")
 
         implementation arcModule("natives:natives-ios")
         implementation arcModule("natives:natives-freetype-ios")
@@ -295,6 +298,16 @@ project(":ios"){
 
 project(":core"){
     apply plugin: "java-library"
+    apply plugin: "kotlin"
+    apply plugin: "kotlin-kapt"
+
+    kapt{
+        javacOptions{
+            option("-source", "14")
+            option("-target", "1.8")
+            option("--enable-preview")
+        }
+    }
 
     compileJava.options.fork = true
 
@@ -327,12 +340,27 @@ project(":core"){
     }
 
     task sourcesJar(type: Jar, dependsOn: classes){
-        classifier = 'sources'
+        archiveClassifier = 'sources'
         from sourceSets.main.allSource
     }
-    
+
+    task assetsJar(type: Jar, dependsOn: ":tools:pack"){
+        archiveClassifier = 'assets'
+        from files("assets"){
+            exclude "config", "cache", "music", "sounds"
+        }
+    }
+
+    task musicJar(type: Jar){
+        archiveClassifier = 'music'
+        from files("assets"){
+            include "music/*", "sounds/*"
+        }
+    }
+
     artifacts{
         archives sourcesJar
+        archives assetsJar
     }
 
     dependencies{
@@ -347,12 +375,12 @@ project(":core"){
         api "com.github.Anuken:rhino:$rhinoVersion"
         if(localArc() && debugged()) api arcModule("extensions:recorder")
 
-        implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.20"
+        implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.68'
+        implementation group: 'com.beust', name: 'klaxon', version: '5.4'  // Yes, I'm aware arc has a json system, but I don't know how to use it.
 
-        compileOnly project(":annotations")
-        annotationProcessor project(":annotations")
         annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'
-
+        compileOnly project(":annotations")
+        kapt project(":annotations")
     }
 
     afterEvaluate{
@@ -376,6 +404,11 @@ project(":core"){
             destinationDir = new File(buildDir, 'javadoc')
         }
     }
+
+    //comp** classes are only used for code generation
+    jar{
+        exclude("mindustry/entities/comp/**")
+    }
 }
 
 project(":server"){
@@ -383,7 +416,6 @@ project(":server"){
 
     dependencies{
         implementation project(":core")
-        implementation project(":client")
         implementation arcModule("backends:backend-headless")
     }
 }
@@ -393,7 +425,6 @@ project(":tests"){
 
     dependencies{
         testImplementation project(":core")
-        testImplementation project(":client")
         testImplementation "org.junit.jupiter:junit-jupiter-params:5.3.1"
         testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
         testImplementation arcModule("backends:backend-headless")
@@ -415,7 +446,6 @@ project(":tools"){
 
     dependencies{
         implementation project(":core")
-        implementation project(":client")
 
         implementation arcModule("natives:natives-desktop")
         implementation arcModule("natives:natives-freetype-desktop")
